// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangePasswordFormErrorMessage Renders correctly with a special code of passwordMismatch 1`] = `
<Message
  error={true}
>
  <Interpolate
    className=""
    i18nKey="userProfile.password.messages.error.passwordMismatch"
  />
</Message>
`;

exports[`ChangePasswordFormErrorMessage Renders correctly with an expected code 1`] = `
<Message
  error={true}
>
  <Interpolate
    className=""
    i18nKey="userProfile.password.messages.error.invalidPassword"
  />
</Message>
`;

exports[`ChangePasswordFormErrorMessage Renders correctly with an unrecognized error code 1`] = `
<Message
  error={true}
>
  <Interpolate
    className=""
    i18nKey="userProfile.password.messages.error.unexpected"
  />
</Message>
`;

exports[`ChangePasswordFormErrorMessage Renders correctly with no error code 1`] = `
<Message
  error={true}
>
  <Interpolate
    className=""
    i18nKey="userProfile.password.messages.error.unexpected"
  />
</Message>
`;
